# clic

./: CMakeLists.txt  README.md  package.xml  readme.md
config/: ct_odometry_livox.yaml  ct_odometry_lvi.yaml  ct_odometry_ncd.yaml  ct_odometry_ntu.yaml
config/livox/: imu_livox.yaml  lidar_livox.yaml
config/lvi/: cam_lvi.yaml  imu_lvi.yaml  lidar_lvi.yaml
config/ncd/: cam_ncd.yaml  imu_ncd.yaml  lidar_ncd.yaml
config/ntu/: cam_ntu.yaml  imu_ntu.yaml  lidar_ntu.yaml
launch/: clic.rviz  odometry.launch
src/app/: odometry_node.cpp  recovery_vlp16_timestamp.cpp  test_analytic_factor.cpp
src/estimator/: msg_manager.cpp  msg_manager.h  odometry_manager.cpp  odometry_manager.h  odometry_viewer.h  trajectory_estimator.cpp  trajectory_estimator.h  trajectory_estimator_options.h  trajectory_manager.cpp  trajectory_manager.h
src/estimator/factor/: ceres_local_param.h
src/estimator/factor/analytic_diff/: image_feature_factor.h  lidar_feature_factor.h  marginalization_factor.cpp  marginalization_factor.h  rd_spline_view.h  so3_spline_view.h  split_spline_view.h  trajectory_value_factor.h
src/estimator/factor/auto_diff/: image_feature_factor.h  lidar_feature_factor.h  trajectory_relative_value_factor.h  trajectory_value_factor.h
src/inertial/: imu_state_estimator.cpp  imu_state_estimator.h  inertial_initializer.cpp  inertial_initializer.h
src/lidar_odometry/: lidar_feature.h  lidar_odometry.cpp  lidar_odometry.h  livox_feature_extraction.cpp  livox_feature_extraction.h  velodyne_feature_extraction.cpp  velodyne_feature_extraction.h
src/loop_closure/: gt_loader.h  loop_closure.cpp  loop_closure.h  loop_closure_data.h  pose_graph.cpp  pose_graph.h
src/spline/: ceres_spline_helper.h  ceres_spline_helper_jet.h  rd_spline.h  se3_spline.h  so3_spline.h  spline_common.h  spline_segment.h  trajectory.cpp  trajectory.h
src/utils/: ceres_callbacks.h  cloud_tool.h  log_utils.h  math_utils.h  mypcl_cloud_type.h  opt_weight.h  parameter_struct.cpp  parameter_struct.h  sophus_utils.hpp  tic_toc.h  yaml_utils.h
src/visual_odometry/: feature_manager.cpp  feature_manager.h  integration_base.h  parameters.cpp  parameters.h  utility.h  vio_initial.cpp  vio_initial.h  visual_odometry.cpp  visual_odometry.h  visual_struct.h
src/visual_odometry/initial/: initial_aligment.cpp  initial_alignment.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
src/visual_odometry/visual_feature/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  feature_tracker_node.h  parameters.cpp  parameters.h
